adjusts styling for mobile again

--- a/html/bfc-signature.html
+++ b/html/bfc-signature.html
@@ -50,11 +50,14 @@
 			.two {
 				width: 100%;
 			}
-			.ten {
-				padding-left: 0;
-			}
 		}
 		/* styles */
+		.two {
+			margin-right: 32px;
+		}
+		.ten {
+			padding-left: 0;
+		}
 		.second {
 			margin-top: 48px;
 		}
