--- a/html/bfc-signature.html
+++ b/html/bfc-signature.html
@@ -27,19 +27,19 @@
 		.row:before,
 		.row:after {
 			content: "";
-				display: table ;
+				display: table;
 				clear: both;
 		}
-
 		.ten {
 			width: 35%;
 			padding: 0 0 0 32px;
+      margin-bottom: 10px;
 		}
 		.two {
 			width: 12%;
 			border-right: 1px solid #cdcdcd;
 		}
-		@media only screen and (max-width: 414px) {
+		@media only screen and (max-width: 767px) {
 			.column {
 				margin: 1% 0 1% 0%;
 			}
@@ -49,6 +49,11 @@
 			.ten,
 			.two {
 				width: 100%;
+			}
+		}
+		@media only screen and (min-width: 768px) and (max-width: 1023px) {
+			.two {
+				width: 16%;
 			}
 		}
 		/* styles */
@@ -121,6 +126,13 @@
 		span {
 			padding: 0 16px 0 0;
 		}
+        span a img {
+        	border: none;
+        }
+        .container {
+        	margin-left: 1px;
+          /*margin-bottom: 10px;*/
+        }
 	</style>
 </head>
 <body>
